--- a/style.css
+++ b/style.css
@@ -11,33 +11,26 @@ p3 {
 }
 
 
-a {
-    color: white;
-    border: 1px solid white;
-    text-align: center;
-    text-justify: center;
-    padding: 0.5%;
-    font-family: monospace;
-    font-size: 14px;
-    border-radius: 4px;
-    background-color: rgb(50,50,50);
-    text-decoration: none;
-}
-
-a:hover {
-    color: white;
-    border: 1px solid white;
-    text-align: center;
-    text-justify: center;
-    padding: 0.5%;
-    font-family: monospace;
-    font-size: 14px;
-    border-radius: 4px;
-    background-color: rgb(100,100,100);
-    text-decoration: none;
-}
-
-a:active {
-    color:black;
-    background-color: white;
+a.button3{
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0 0.3em 0.3em 0;
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    color:#FFFFFF;
+    background-color:#4eb5f1;
+    text-align:center;
+    transition: all 0.2s;
+    }
+    a.button3:hover{
+    background-color:#4095c6;
+    }
+    @media all and (max-width:30em){
+    a.button3{
+    display:block;
+    margin:0.2em auto;
+    }
 }
