--- a/style.css
+++ b/style.css
@@ -13,24 +13,25 @@ p3 {
 
 a.button3{
     display:inline-block;
-    padding:0.3em 1.2em;
+    padding:0.35em 1.2em;
+    border:0.1em solid #FFFFFF;
     margin:0 0.3em 0.3em 0;
-    border-radius:2em;
+    border-radius:0.12em;
     box-sizing: border-box;
     text-decoration:none;
     font-family:'Roboto',sans-serif;
     font-weight:300;
     color:#FFFFFF;
-    background-color:#4eb5f1;
     text-align:center;
     transition: all 0.2s;
     }
     a.button3:hover{
-    background-color:#4095c6;
+        color:#000000;
+        background-color:#FFFFFF;
     }
     @media all and (max-width:30em){
     a.button3{
-    display:block;
-    margin:0.2em auto;
+        display:block;
+        margin:0.4em auto;
     }
 }
