--- a/style.css
+++ b/style.css
@@ -35,3 +35,125 @@ a.button3{
         margin:0.4em auto;
     }
 }
+
+body {
+    background-color: rgb(66, 66, 66);
+    color: rgb(48, 48, 48);
+    background-image: url(../a.gif);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-repeat:repeat;
+    background-attachment:fixed;
+    overflow:scroll;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    
+    
+}
+    
+body::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+}
+
+
+h1 {
+    color: rgb(0, 204, 255);
+    position: relative;
+    -webkit-text-stroke: 1px black; /* width and color */
+    top: 200px;
+    font-smooth: never;
+    -webkit-font-smoothing : none;
+}
+
+h2 {
+    color: rgb(253, 253, 253);
+}
+
+h3 {
+    color:rgb(0, 162, 255);
+    position: relative;
+    -webkit-text-stroke: 1px black; /* width and color */
+    top: 150px;
+}
+
+h4{
+    color:rgb(253, 253, 253);
+    position: relative;
+    
+    top: 900x;
+}
+
+h4{
+    text-align: center;
+}
+
+h3{
+    text-align: center;
+}
+
+h1 {
+    text-align: center;
+}
+
+p {
+    text-align: center;
+
+    position:relative;
+
+    top: 1050px;
+}
+
+div {
+    text-align: center;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    position:relative;
+    top:1000px;
+    
+    
+
+    
+}
+
+video {
+    margin-left: auto;
+    margin-right: auto;
+    display: block
+}
+
+li {
+    color: cornsilk;
+}
+
+p2{
+    text-align:center;
+
+    position:relative;
+    top: 1200px;
+
+    
+
+}
+
+p3{
+    background-color: rgba(255, 255, 255, 0);
+    color: rgb(255, 255, 255);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+img {
+    border: 5px solid #555;
+}
+
+
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+
+
+
