--- a/style.css
+++ b/style.css
@@ -13,33 +13,34 @@ p3 {
 
 a.button3{
     display:inline-block;
-    padding:0.35em 1.2em;
-    border:0.1em solid #FFFFFF;
+    padding:0.3em 1.2em;
     margin:0 0.3em 0.3em 0;
-    border-radius:0.12em;
+    border-radius:2em;
     box-sizing: border-box;
     text-decoration:none;
     font-family:'Roboto',sans-serif;
     font-weight:300;
     color:#FFFFFF;
+    background-color:#4eb5f1;
     text-align:center;
     transition: all 0.2s;
     }
+    
     a.button3:hover{
-        color:#000000;
-        background-color:#FFFFFF;
-    }
-    @media all and (max-width:30em){
-    a.button3{
+        background-color:#4095c6;
+        }
+        @media all and (max-width:30em){
+        a.button3{
         display:block;
-        margin:0.4em auto;
-    }
-}
+        margin:0.2em auto;
+        }
+        }
+
 
 body {
     background-color: rgb(66, 66, 66);
     color: rgb(48, 48, 48);
-    background-image: url(../a.gif);
+    background-image: url(../b22aa22b2f3f55b6468361158d52e2e7.gif);
     background-size: cover;
     background-repeat: no-repeat;
     background-repeat:repeat;
