--- a/style.css
+++ b/style.css
@@ -1,53 +1,51 @@
 
 
 p3 {
+    color:rgb(0, 204, 255);
+    position: relative;
     text-justify: center;
     text-align: center;
-    background-color: rgba(255, 255, 255, 0);
-    color: rgb(255, 255, 255);
-    font-family: monospace;
-    font-size: 30px;
-    text-decoration: none;
+    top: 160px;
+    -webkit-text-stroke: 1px black; /* width and color */
 }
 
 
 a.button3{
     display:inline-block;
-    padding:0.3em 1.2em;
+    padding:0.35em 1.2em;
+    border:0.1em solid #FFFFFF;
     margin:0 0.3em 0.3em 0;
-    border-radius:2em;
+    border-radius:0.12em;
     box-sizing: border-box;
     text-decoration:none;
     font-family:'Roboto',sans-serif;
     font-weight:300;
     color:#FFFFFF;
-    background-color:#4eb5f1;
     text-align:center;
     transition: all 0.2s;
     }
-    
     a.button3:hover{
-        background-color:#4095c6;
-        }
-        @media all and (max-width:30em){
-        a.button3{
+        color:#000000;
+        background-color:#FFFFFF;
+    }
+    @media all and (max-width:30em){
+    a.button3{
         display:block;
-        margin:0.2em auto;
-        }
-        }
-
+        margin:0.4em auto;
+    }
+}
 
 body {
     background-color: rgb(66, 66, 66);
     color: rgb(48, 48, 48);
-    background-image: url(../b22aa22b2f3f55b6468361158d52e2e7.gif);
+    background-image: url(../2825704.gif);
     background-size: cover;
     background-repeat: no-repeat;
     background-repeat:repeat;
     background-attachment:fixed;
     overflow:scroll;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
-    
+    font-family: "Comic Sans MS", "Comic Sans";
+    align-items: center;
     
 }
     
@@ -56,49 +54,47 @@ body::-webkit-scrollbar {
 }
 
 
+
+
 h1 {
-    color: rgb(0, 204, 255);
+    color: rgb(0, 225, 255);
     position: relative;
-    -webkit-text-stroke: 1px black; /* width and color */
-    top: 200px;
-    font-smooth: never;
-    -webkit-font-smoothing : none;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-    margin: 0 auto;
-    padding: 20px;
+    text-justify: center;
+    text-align: center;
+    -webkit-text-stroke: 1px rgb(0, 0, 0);
+    text-align: center;
+    top: 160px;
+    display: inline-block
 }
+.title {
+    text-align: center;
+  }
 
 h2 {
-    color: rgb(253, 253, 253);
+    color:rgb(0, 204, 255);
+    position: relative;
+    text-justify: center;
+    text-align: center;
+    top: 160px;
+    -webkit-text-stroke: 1px black; /* width and color */
 }
 
 h3 {
-    color:rgb(0, 162, 255);
+    color:rgb(0, 204, 255);
     position: relative;
+    text-justify: center;
+    text-align: center;
+    top: 160px;
     -webkit-text-stroke: 1px black; /* width and color */
-    top: 150px;
 }
 
 h4{
     color:rgb(253, 253, 253);
     position: relative;
-    
-    top: 900x;
-}
-
-h4{
     text-align: center;
-}
-
-h3{
-    text-align: center;
-}
-
-h1 {
-    text-align: center;
+    top: 500px;
+    -webkit-text-stroke: 1px black; /* width and color */
 }
 
 p {
@@ -107,6 +103,12 @@ p {
     position:relative;
 
     top: 1050px;
+    color:rgb(0, 204, 255);
+    position: relative;
+    text-justify: center;
+    text-align: center;
+    top: 160px;
+    -webkit-text-stroke: 1px black; /* width and color */
 }
 
 div {
@@ -139,8 +141,13 @@ p2{
     text-align:center;
 
     position:relative;
-    top: 1200px;
-
+    top: 200px;
+    color:rgb(0, 204, 255);
+    position: relative;
+    text-justify: center;
+    text-align: center;
+    top: 160px;
+    -webkit-text-stroke: 1px black; /* width and color */
     
 
 }
@@ -149,6 +156,12 @@ p3{
     background-color: rgba(255, 255, 255, 0);
     color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
+    color:rgb(0, 204, 255);
+    position: relative;
+    text-justify: center;
+    text-align: center;
+    top: 160px;
+    -webkit-text-stroke: 1px black; /* width and color */
 }
 
 img {
@@ -160,7 +173,6 @@ img {
 .scrollbar-hidden::-webkit-scrollbar {
   display: none;
 }
-
 
 
 
