--- a/style.css
+++ b/style.css
@@ -7,8 +7,20 @@ p3 {
     text-align: center;
     top: 160px;
     -webkit-text-stroke: 1px black; /* width and color */
+    background-color: rgba(255, 255, 255, 0);
+    color: rgb(255, 255, 255);
+    font-family: Arial, Helvetica, sans-serif;
+    color:rgb(0, 204, 255);
+    position: relative;
+    text-justify: center;
+    text-align: center;
+    top: 160px;
+    -webkit-text-stroke: 1px black; /* width and color */
 }
 
+.center-container {
+  align-items: center; /* Centers on y-axis */
+}
 
 a.button3{
     display:inline-block;
@@ -38,13 +50,13 @@ a.button3{
 body {
     background-color: rgb(66, 66, 66);
     color: rgb(48, 48, 48);
-    background-image: url(../2825704.gif);
+    background-image: url(../BG.gif);
     background-size: cover;
     background-repeat: no-repeat;
     background-repeat:repeat;
     background-attachment:fixed;
     overflow:scroll;
-    font-family: "Comic Sans MS", "Comic Sans";
+    font-family: "Roboto", sans-serif;
     align-items: center;
     
 }
@@ -163,12 +175,6 @@ p3{
     -webkit-text-stroke: 1px black; /* width and color */
 }
 
-img {
-    
-}
-
-
-
 .scrollbar-hidden::-webkit-scrollbar {
   display: none;
 }
@@ -270,3 +276,73 @@ img {
     flex: 33.33%;
     padding: 5px;
   }
+  p69{
+    width: 800px;
+    height: 2100px;
+  }
+
+/* Styles for mobile devices */
+@media (max-width: 767px) {
+  /* Adjust the font size for mobile devices */
+  .heading-large {
+      font-size: 200px; /* You can set the desired font size for mobile here */
+  }
+
+  /* Increase button size for mobile */
+  a.button3 {
+      font-size: 20px; /* You can set the desired font size for mobile buttons here */
+      padding: 0.6em 1.4em; /* You can adjust the padding to make the buttons bigger */
+  }
+
+  .dropbtn {
+    font-size: 20px; /* You can set the desired font size for mobile buttons here */
+    padding: 0.6em 1.4em; /* You can adjust the padding to make the buttons bigger */
+    }
+    a.dropbtn:hover{
+        color:#000000;
+        background-color:#FFFFFF;
+    }
+    @media all and (max-width:30em){
+    a.dropbtn{
+        display:block;
+        margin:0.4em auto;
+    }
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    font-size: 20px; /* You can set the desired font size for mobile buttons here */
+    padding: 0.6em 1.4em; /* You can adjust the padding to make the buttons bigger */
+  }
+  
+
+  .dropdown-content a {
+    font-size: 20px; /* You can set the desired font size for mobile buttons here */
+    padding: 0.6em 1.4em; /* You can adjust the padding to make the buttons bigger */
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+    width: auto;
+  }
+
+  video {
+    max-width: 100%;
+    height: auto;
+    width: auto;
+  }
+
+  iframe{
+    height: auto;
+    width: auto;
+  }
+
+  p69{
+    width: auto;
+  }
+}
