--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ p3 {
     -webkit-text-stroke: 1px black; /* width and color */
 }
 
+img.rounded-corners {
+  border-radius: 30px;
+  border: 5px solid #555;
+}
+
 .center-container {
   align-items: center; /* Centers on y-axis */
 }
@@ -69,16 +74,27 @@ body::-webkit-scrollbar {
 
 
 h1 {
-    color: rgb(0, 225, 255);
+    color: rgb(255, 255, 255);
     position: relative;
     text-align: center;
     text-justify: center;
     text-align: center;
-    -webkit-text-stroke: 1px rgb(0, 0, 0);
     text-align: center;
     top: 160px;
     display: inline-block
 }
+
+h1Second {
+  color:rgb(0, 204, 255);
+  position: relative;
+  text-align: center;
+  text-justify: center;
+  text-align: center;
+  text-align: center;
+  top: 160px;
+  display: inline-block
+}
+
 .title {
     text-align: center;
   }
@@ -89,7 +105,6 @@ h2 {
     text-justify: center;
     text-align: center;
     top: 160px;
-    -webkit-text-stroke: 1px black; /* width and color */
 }
 
 h5{
@@ -135,7 +150,6 @@ img {
     margin-left: auto;
     margin-right: auto;
     position:relative;
-
 }
 
 video {
@@ -239,8 +253,9 @@ p3{
   /* Container needed to position the button. Adjust the width as needed */
 .container {
     position: relative;
-    width: 50%;
-  }
+    
+    max-width: 1500px;
+}
   
   /* Make the image responsive */
   .container img {
@@ -346,3 +361,4 @@ p3{
     width: auto;
   }
 }
+
