--- a/style.css
+++ b/style.css
@@ -30,20 +30,20 @@ img.rounded-corners {
 a.button3{
     display:inline-block;
     padding:0.35em 1.2em;
-    border:0.1em solid #000000;
+    border:0.1em solid #ffffff;
     margin:0 0.3em 0.3em 0;
     border-radius:0.12em;
     box-sizing: border-box;
     text-decoration:none;
     font-family:'Roboto',sans-serif;
     font-weight:300;
-    color:#000000;
+    color:#ffffff;
     text-align:center;
     transition: all 0.2s;
     }
     a.button3:hover{
-        color:#000000;
-        background-color:#FFFFFF;
+        color:#ffffff4b;
+        background-color:#ffffff4f;
     }
     @media all and (max-width:30em){
     a.button3{
@@ -53,9 +53,9 @@ a.button3{
 }
 
 body {
-    background-color: rgb(66, 66, 66);
+    background-color: rgb(255, 255, 255);
     color: rgb(190, 190, 190);
-    background-image: url(../bg.gif);
+    background-image: url(../e.gif);
     background-size: cover;
     background-repeat: no-repeat;
     background-repeat:repeat;
@@ -74,7 +74,7 @@ body::-webkit-scrollbar {
 
 
 h1 {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     position: relative;
     text-align: center;
     text-justify: center;
@@ -85,7 +85,7 @@ h1 {
 }
 
 h1Second {
-  color:rgb(0, 0, 0);
+  color:rgb(255, 255, 255);
   position: relative;
   text-align: center;
   text-justify: center;
@@ -100,7 +100,7 @@ h1Second {
   }
 
 h2 {
-    color:rgb(0, 0, 0);
+    color:rgb(255, 255, 255);
     position: relative;
     text-justify: center;
     text-align: center;
@@ -108,16 +108,16 @@ h2 {
 }
 
 h5{
-    border: 5px solid #555;
+    border: 5px solid #ffffff;
 }
 
 h3 {
-    color:rgb(0, 0, 0);
+    color:rgb(255, 255, 255);
     position: relative;
     text-justify: center;
     text-align: center;
     top: 160px;
-    -webkit-text-stroke: 1px black; /* width and color */
+    -webkit-text-stroke: 1px rgb(170, 170, 170); /* width and color */
 }
 
 h4{
@@ -125,7 +125,7 @@ h4{
     position: relative;
     text-align: center;
     top: 500px;
-    -webkit-text-stroke: 1px black; /* width and color */
+    -webkit-text-stroke: 1px rgb(131, 131, 131); /* width and color */
 }
 
 p {
@@ -133,12 +133,12 @@ p {
 
     position:relative;
 
-    color:rgb(0, 0, 0);
+    color:rgb(255, 255, 255);
     position: relative;
     text-justify: center;
     text-align: center;
     top: 160px;
-    -webkit-text-stroke: 1px black; /* width and color */
+    -webkit-text-stroke: 1px rgb(161, 161, 161); /* width and color */
 }
 
 div {
@@ -159,7 +159,7 @@ video {
 }
 
 li {
-    color: rgb(39, 39, 39);
+    color: rgb(255, 255, 255);
 }
 
 p2{
@@ -197,20 +197,20 @@ p3{
 .dropbtn {
     display:inline-block;
     padding:0.35em 1.2em;
-    border:0.1em solid #000000;
+    border:0.1em solid #ffffff;
     margin:0 0.3em 0.3em 0;
     border-radius:0.12em;
     box-sizing: border-box;
     text-decoration:none;
     font-family:'Roboto',sans-serif;
     font-weight:300;
-    color:#000000;
+    color:#ffffff;
     text-align:center;
     transition: all 0.2s;
     }
     a.dropbtn:hover{
         color:#ffffff00;
-        background-color:#474747;
+        background-color:#ffffff;
     }
     @media all and (max-width:30em){
     a.dropbtn{
@@ -227,7 +227,7 @@ p3{
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #00000000;
+    background-color: #ffffff00;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -235,7 +235,7 @@ p3{
   
 
   .dropdown-content a {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
