--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@ a.button3{
 }
 
 body {
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 10, 33);
     color: rgb(190, 190, 190);
-    background-image: url(../e.gif);
+    background-image: url(Pictures/E-1246204-53BFDC6C-transformed.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-repeat:repeat;
@@ -74,7 +74,7 @@ body::-webkit-scrollbar {
 
 
 h1 {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     position: relative;
     text-align: center;
     text-justify: center;
@@ -85,7 +85,7 @@ h1 {
 }
 
 h1Second {
-  color:rgb(255, 255, 255);
+  color:rgb(0, 0, 0);
   position: relative;
   text-align: center;
   text-justify: center;
@@ -100,10 +100,9 @@ h1Second {
   }
 
 h2 {
-    color:rgb(255, 255, 255);
+    color:rgb(0, 0, 0);
     position: relative;
     text-justify: center;
-    text-align: center;
     top: 160px;
 }
 
@@ -112,7 +111,7 @@ h5{
 }
 
 h3 {
-    color:rgb(255, 255, 255);
+    color:rgb(0, 0, 0);
     position: relative;
     text-justify: center;
     text-align: center;
@@ -133,7 +132,7 @@ p {
 
     position:relative;
 
-    color:rgb(255, 255, 255);
+    color:rgb(0, 0, 0);
     position: relative;
     text-justify: center;
     text-align: center;
