--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ img.rounded-corners {
 a.button3{
     display:inline-block;
     padding:0.35em 1.2em;
-    border:0.1em solid #ffffff;
+    
     margin:0 0.3em 0.3em 0;
     border-radius:0.12em;
     box-sizing: border-box;
@@ -55,15 +55,13 @@ a.button3{
 body {
     background-color: rgb(0, 10, 33);
     color: rgb(190, 190, 190);
-    background-image: url(Pictures/meee.png);
+    background-image: url(Pictures/bg2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-repeat:repeat;
     background-attachment:fixed;
     overflow:scroll;
     font-family: "Roboto", sans-serif;
     align-items: center;
-    
 }
     
 body::-webkit-scrollbar {
@@ -194,7 +192,7 @@ p3{
 .dropbtn {
     display:inline-block;
     padding:0.35em 1.2em;
-    border:0.1em solid #ffffff;
+    
     margin:0 0.3em 0.3em 0;
     border-radius:0.12em;
     box-sizing: border-box;
